#62 - Finished UX Masterclass page - Added last FAQ - Fixed spacing of illustrations - Added email form to contact section

--- a/_sass/_icons.scss
+++ b/_sass/_icons.scss
@@ -4,3 +4,10 @@
 		margin: $spacing-unit;
 	}
 }
+
+.illustration {
+	width: 25%;
+	height: auto;
+	margin: $spacing-unit;
+	margin-bottom: 5px;
+}
