--- a/_sass/_text.scss
+++ b/_sass/_text.scss
@@ -163,6 +163,10 @@ p {
   }
 }
 
+b {
+  font-weight: $weight-heavy;
+}
+
 .exp-dates {
   display: inline;
 }
