--- a/_sass/_vars.scss
+++ b/_sass/_vars.scss
@@ -11,7 +11,7 @@ $nav-text:                    $actual-black;
 
 $brand-color:                 #ef473a;
 $brand-secondary:             #cb2d3e;
-$brand-darker:                darken($brand-color, 15%);
+$brand-darker:                darken($brand-secondary, 15%);
 
 $banner-grad-1:               #2f022c;
 $banner-grad-2:               #064349;
