--- a/_sass/accordion.scss
+++ b/_sass/accordion.scss
@@ -14,7 +14,7 @@
   position: relative;
   display: block;
   padding: 0 0 0 1em;
-  background: $brand-color;
+  background: $brand-secondary;
   font-weight: $weight-heavy;
   line-height: 3;
   cursor: pointer;
@@ -25,20 +25,20 @@
 .tab-content {
   max-height: 0;
   overflow: auto;
-  background: $brand-secondary;
+  background: $brand-darker;
   -webkit-transition: max-height .35s;
   -o-transition: max-height .35s;
   transition: max-height .35s;
 
   p {
-    padding: 1em;
+    padding: 10px $spacing-unit;
     margin-bottom: 0;
 
     a {
-      color: $banner-grad-1;
+      color: $actual-white;
 
       &:hover {
-        color: lighten($banner-grad-1, 15%);
+        color: lighten($banner-grad-2, 15%);
       }
     }
   }
